# CppProject

./: .gitignore  CMakeLists.txt  README.md  build.sh  common.inc  docker-build.sh  docker-join.sh  docker-stop.sh  dockerfile  run.sh  test.sh
docker/: common.inc  dockerfile  stop.sh
src/: CMakeLists.txt  main.cpp
src/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/test/: CMakeLists.txt  SimpleTest.cpp
